log out functionality added
